# mytranslator

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs  update.rs  window.rs
src-tauri/src/engines/: gemini.rs  google.rs  mod.rs
src-tauri/src/hotkey/: evdev_backend.rs  mod.rs
src/lib/: api.ts  languages.ts  theme.ts
src/windows/popup/: Popup.tsx
src/windows/settings/: Settings.tsx
